qtsensors-opensource-src (5.5.0-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.5.0.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 28 Aug 2015 15:06:31 +0300

qtsensors-opensource-src (5.4.2-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 24 Jun 2015 17:41:45 -0300

qtsensors-opensource-src (5.4.2-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * Update Source URL, as gitorious is closing.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream release.
    - Bump Qt build dependencies.
  * Clear up the list in Uploaders removing people who hasn't committed to the
    repo in more than a year. They can re add themselves whenever they want
    (and we really hope to see you back really soon!).
  * Expose HTML documentation (Closes: #751182).
  * The original source package no longer contains the minimized javascript
    code, so we are switching back to non-dfsg versioning.
    - Update debian/copyright accordingly.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 03 Jun 2015 16:50:09 -0300

qtsensors-opensource-src (5.4.1+dfsg-1) experimental; urgency=medium

  * New upstream release.

  [ Rohan Garg ]
  * Don't install the dummy sensors plugin, it was removed in 5.4.1
    (see https://bugreports.qt.io/browse/QTBUG-39475).

  [ Dmitry Shachnev ]
  * Bump Qt build-dependencies to 5.4.1.
  * Update debian/watch to use https://download.qt.io/.
  * Disable tests that work only on local installations.
  * Re-enable running tests during build.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 04 Mar 2015 19:47:10 +0300

qtsensors-opensource-src (5.4.0+dfsg-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.4.0.
  * Update and clean up debian/copyright.
  * Bump Standards-Version to 3.9.6, no changes needed.